fixed banner overlapping issue

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
   /*Title Section Style*/
 
   .space{
-  	height: 66px;
+  	height: 83px;
   }
 
   .titleSection {
